Fix vertical align of nav scroll caret

--- a/less/nav-scroll-core.less
+++ b/less/nav-scroll-core.less
@@ -63,7 +63,7 @@ div[data-nav-scroll="true"] {
         }
 
         > span {
-            vertical-align: middle;
+            vertical-align: baseline;
         }
     }
 
